# playbox

./: .gitignore  CLAUDE.md  README.md  pinout.md  pyproject.toml
scripts/: Automation_Custom_Script.sh  install.sh
src/playbox/: __init__.py  __main__.py  callbacks.py  config.py  core.py  library.py  player.py  scan_state.py
src/playbox/defaults/: buttons.yaml  settings.yaml  tags.yaml
src/playbox/hardware/: __init__.py  buttons.py  rfid.py
src/playbox/web/: __init__.py  components.py  server.py
src/playbox/web/assets/: style.css
src/playbox/web/pages/: __init__.py  control.py  play.py  setup.py
systemd/: playbox.service
